--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
         "pimple/pimple": "~2.1",
         "ramsey/uuid": "^3.3.0",
         "sensio/framework-extra-bundle": "^3.0",
-        "sensio/generator-bundle": "^3.0",
         "simplesamlphp/saml2": "4.17.*",
         "swiftmailer/swiftmailer": "^5.4",
+        "symfony/maker-bundle": "~1.0.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/swiftmailer-bundle": "^2.6",
         "symfony/symfony": "3.4.*",
